Moving test mail server to build-tools (avoid noisy logging messages in embedded mode)